external-crates/move/crates/move-compiler/tests/move_check/verification/specs_are_not_errors.move
module a::m {

    // not an error
    spec foo {}

    // not an error
    #[verify_only]
    fun foo() {}
}

// not a duplicate module, not an error
spec a::m {

}
